start home page

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,13 +1,11 @@
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AdminLTE 3 | Dashboard 2</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-   
-    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="/node_modules/admin-lte/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
     <link rel="stylesheet" href="/node_modules/admin-lte/plugins/fontawesome-free/css/all.min.css" type="text/css">
     <link rel="stylesheet" href="/node_modules/admin-lte/dist/css/adminlte.min.css" type="text/css">
-    <link rel="stylesheet" href="/node_modules/admin-lte/plugins/icheck-bootstrap/icheck-bootstrap.css" type="text/css">
-
     
 </head>
