feat(pages): add modular layout ejs

--- a/views/partials/script.ejs
+++ b/views/partials/script.ejs
@@ -1,4 +1,10 @@
-<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
-<script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="/node_modules/jquery/dist/jquery.min.js"></script>
-<script src="/node_modules/popper.js/dist/umd/popper.js"></script>
+<script src="/node_modules/admin-lte/plugins/jquery/jquery.min.js"></script>
+  <script src="/node_modules/admin-lte/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/node_modules/admin-lte/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
+  <script src="/node_modules/admin-lte/dist/js/pages/dashboard2.js"></script>
+  <script src="/node_modules/admin-lte/dist/js/adminlte.min.js"></script>
+  <script src="/node_modules/admin-lte/plugins/jquery-mousewheel/jquery.mousewheel.js"></script>
+  <script src="/node_modules/admin-lte/plugins/raphael/raphael.min.js"></script>
+  <script src="/node_modules/admin-lte/plugins/jquery-mapael/jquery.mapael.min.js"></script>
+  <script src="/node_modules/admin-lte/plugins/jquery-mapael/maps/usa_states.min.js"></script>
+  <script src="/node_modules/admin-lte/plugins/chart.js/Chart.min.js"></script>
