developing(router.ts/Controllers): Add datatables, Start Controllers and routes

--- a/views/loja/index.ejs
+++ b/views/loja/index.ejs
@@ -1,7 +1,22 @@
 <%- include('../partials/layoutPart1') %>
     <div class="row">
 
-        <h1>OLAAA</h1>
+        <div class="col-md-12">
+
+            <div class="card">
+                <div class="card-header">
+                    <div class="card-tools">
+                        <button type="button" class="btn btn-primary" >
+                            <i class="fas fa-plus"></i>
+                            Adicionar Loja
+                            </button>
+                    </div>
+                </div>
+                <div class="card-body"></div>
+                <div class="card-footer"></div>
+            </div>
         </div>
+
+    </div>
 
 <%- include('../partials/layoutPart2') %>
