--- a/views/partials/aside.ejs
+++ b/views/partials/aside.ejs
@@ -1,8 +1,7 @@
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
   <!-- Brand Logo -->
-  <a href="#" class="brand-link">
+  <a href="/" class="brand-link d-flex justify-content-center">
     <img src="/assets/imgs/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-    <span class="brand-text font-weight-light">AdminLTE 3</span>
   </a>
 
   <!-- Sidebar -->
@@ -10,11 +9,11 @@
   
 
     <!-- SidebarSearch Form -->
-    <div class="form-inline">
+    <div style="margin-top:10px" class="form-inline">
       <div class="input-group" data-widget="sidebar-search">
         <input class="form-control form-control-sidebar" type="search" placeholder="Search" aria-label="Search">
         <div class="input-group-append">
-          <button class="btn btn-sidebar">
+          <button class="btn btn-primary btn-sidebar">
             <i class="fas fa-search fa-fw"></i>
           </button>
         </div>
@@ -28,8 +27,8 @@
              with font-awesome or any other icon font library -->
      
         <li class="nav-item">
-          <a href="pages/widgets.html" class="nav-link">
-              <i class="nav-icon fa fa-store"></i>
+          <a href="/loja" class="nav-link bg-danger">
+              <i class="nav-icon bg-dan fa fa-store"></i>
               <p>
                Lojas
             </p>
