--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,4 +6,7 @@
     <link rel="stylesheet" href="/node_modules/admin-lte/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
     <link rel="stylesheet" href="/node_modules/admin-lte/plugins/fontawesome-free/css/all.min.css" type="text/css">
     <link rel="stylesheet" href="/node_modules/admin-lte/dist/css/adminlte.min.css" type="text/css">
+    <link rel="stylesheet" href="/node_modules/admin-lte/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
+    <link rel="stylesheet" href="/node_modules/admin-lte/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
+    <link rel="stylesheet" href="/node_modules/admin-lte/plugins/datatables-buttons/css/buttons.bootstrap4.min.css">
 </head>
