--- a/views/partials/script.ejs
+++ b/views/partials/script.ejs
@@ -1,10 +1,22 @@
 <script src="/node_modules/admin-lte/plugins/jquery/jquery.min.js"></script>
-  <script src="/node_modules/admin-lte/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="/node_modules/admin-lte/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
-  <script src="/node_modules/admin-lte/dist/js/pages/dashboard2.js"></script>
-  <script src="/node_modules/admin-lte/dist/js/adminlte.min.js"></script>
-  <script src="/node_modules/admin-lte/plugins/jquery-mousewheel/jquery.mousewheel.js"></script>
-  <script src="/node_modules/admin-lte/plugins/raphael/raphael.min.js"></script>
-  <script src="/node_modules/admin-lte/plugins/jquery-mapael/jquery.mapael.min.js"></script>
-  <script src="/node_modules/admin-lte/plugins/jquery-mapael/maps/usa_states.min.js"></script>
-  <script src="/node_modules/admin-lte/plugins/chart.js/Chart.min.js"></script>
+<script src="/node_modules/admin-lte/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="/node_modules/admin-lte/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
+<script src="/node_modules/admin-lte/dist/js/pages/dashboard2.js"></script>
+<script src="/node_modules/admin-lte/dist/js/adminlte.min.js"></script>
+<script src="/node_modules/admin-lte/plugins/jquery-mousewheel/jquery.mousewheel.js"></script>
+<script src="/node_modules/admin-lte/plugins/raphael/raphael.min.js"></script>
+<script src="/node_modules/admin-lte/plugins/jquery-mapael/jquery.mapael.min.js"></script>
+<script src="/node_modules/admin-lte/plugins/jquery-mapael/maps/usa_states.min.js"></script>
+<script src="/node_modules/admin-lte/plugins/chart.js/Chart.min.js"></script>
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.js"></script>
+
+<script>
+  $('#change').on('click', function (e) {
+      $('body').toggleClass('dark-mode')
+            // $('nav').toggleClass('navbar-dark')
+
+      $('aside').toggleClass('sidebar-dark-primary')
+  }
+  )
+
+</script>
