--- a/views/loja/form.ejs
+++ b/views/loja/form.ejs
@@ -1,45 +1,76 @@
+
 <%- include('../partials/modal/modalPart1') %>
-    <div class="row">
-        <div class="col-md-12 form-group">
-            <form>
-                <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                    <div class="form-text">We'll never share your email with anyone else.</div>
-                </div>
+
+<div class="row">
+
+            <div class="col-md-12">
+                    <div id="cidades" class="mb-3">
+                        <label>Cidade</label>
+                        <select name="cidade" class="form-control" id="cidade" aria-label="Default select example"></select>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="exampleInputPassword1" class="form-label">Gerente</label>
+                        <select name="gerente" class="form-control" id="gerente" aria-label="Default select example"></select>
+                    </div>
+
+                    <div class="mb-3">
+                        <label>Endereço</label>
+                        <input name="endereco" type="text" class="form-control">
+                        <div class="form-text">(Numero / Rua)</div>
+                    </div>
+
+                    <div class="mb-3">
+                        <label>Bairro</label>
+                        <input name="bairro" type="text" class="form-control">
+                    </div>
 
 
-                <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1">
-                </div>
+                    <div class="mb-3">
+                        <label>CEP</label>
+                        <input name="cep" type="text" class="form-control">
+                    </div>
 
-                <div class="mb-3">
-                    <label for="endereco">Endereço</label>
-                    <select class="form-control" id="endereco" aria-label="Default select example">
-                        <option selected>Open this select menu</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
-                    </select>
-                </div>
-            </form>
-        </div>
+                    <div class="mb-3">
+                        <label>Telefone</label>
+                        <input name="telefone" type="number" class="form-control">
+                    </div>
+            </div>
     </div>
+
+
     <%- include('../partials/modal/modalPart2') %>
 
         <script>
-            $('#endereco').on('click', function () {
+
+            $('#cidade').on('click', function () {
                 $.ajax({
                     method: 'GET',
-                    url: '/get_enderecos',
+                    url: '/get_cidade',
                 }).done(function (response) {
-                    $('#endereco option').remove()
+                    $('#cidade option').remove()
                     response.forEach(element => {
-                        let option = `<option value="${element.categoria_id}">${element.nome}</option>`
-                        $('#endereco').append(option)
+                        let option = `<option value="${element.cidade_id}">${element.cidade} </option>`
+                        $('#cidade').append(option)
                     })
-
                 })
             });
+
+            $('#gerente').on('click', function () {
+                $.ajax({
+                    method: 'GET',
+                    url: '/get_gerentes',
+                }).done(function (response) {
+                    $('#gerente option').remove()
+                    response.forEach(element => {
+                        let option = `<option value="${element.funcionario_id}">${element.primeiro_nome} ${element.ultimo_nome}</option>`
+                        $('#gerente').append(option)
+                    })
+                })
+            });
+
+
+
         </script>
+
+</form>
