--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -10,4 +10,6 @@
     <link rel="stylesheet" href="/node_modules/admin-lte/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
     <link rel="stylesheet" href="/node_modules/admin-lte/plugins/datatables-buttons/css/buttons.bootstrap4.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.css">
+    <script src="/node_modules/admin-lte/plugins/jquery/jquery.min.js"></script>
+
 </head>
