--- a/views/partials/modal/modalPart2.ejs
+++ b/views/partials/modal/modalPart2.ejs
@@ -1,7 +1,7 @@
 </div>
 <div class="modal-footer">
   <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-  <button type="button" class="btn btn-primary">Salvar</button>
+  <button type="submit" class="btn btn-primary">Salvar</button>
 </div>
 </div>
 </div>
